@@ -157,32 +157,27 @@ class PartTextureGenerator {
 
     private void processOre(ResourceLocation stoneType, MaterialOreSet oreSet) throws IOException {
         String template = String.format("modern_industrialization:textures/materialsets/ores/%s.png", oreSet.name);
-        String stoneId = stoneType.getPath();
-        String prefix;
-        if (stoneId.equals("stone")) {
-            prefix = "";
+        ResourceLocation from;
+        boolean deepslate = stoneType.equals(OrePart.TYPE_DEEPSLATE);
+        if (stoneType.equals(OrePart.TYPE_STONE) || deepslate) {
+            from = ResourceLocation.withDefaultNamespace(switch (oreSet) {
+            case IRON -> deepslate ? "deepslate_iron_ore" : "iron_ore";
+            case COPPER -> deepslate ? "deepslate_copper_ore" : "copper_ore";
+            case LAPIS -> deepslate ? "deepslate_lapis_ore" : "lapis_ore";
+            case REDSTONE -> deepslate ? "deepslate" : "redstone_ore";
+            case DIAMOND -> deepslate ? "deepslate" : "diamond_ore";
+            case GOLD -> deepslate ? "deepslate_gold_ore" : "gold_ore";
+            case EMERALD -> deepslate ? "deepslate_emerald_ore" : "emerald_ore";
+            case COAL -> deepslate ? "deepslate_coal_ore" : "coal_ore";
+            default -> deepslate ? "deepslate" : "stone";
+            });
         } else {
-            prefix = stoneId + "_";
+            // Ore textures don't exist for any blocks other than stone or deepslate,
+            // so if the source block is something else then just pull from the block's usual texture.
+            from = stoneType;
         }
 
-        String from = switch (oreSet) {
-        case IRON -> "%siron_ore".formatted(prefix);
-        case COPPER -> "%scopper_ore".formatted(prefix);
-        case LAPIS -> "%slapis_ore".formatted(prefix);
-        case REDSTONE -> "%sredstone_ore".formatted(prefix);
-        case DIAMOND -> "%sdiamond_ore".formatted(prefix);
-        case GOLD -> "%sgold_ore".formatted(prefix);
-        case EMERALD -> "%semerald_ore".formatted(prefix);
-        case COAL -> "%scoal_ore".formatted(prefix);
-        default -> stoneId;
-        };
-        // Ore textures don't exist for any blocks other than stone or deepslate, so if the source block is something else then just pull from the
-        // block's usual texture.
-        if (!stoneId.equals("stone") && !stoneId.equals("deepslate")) {
-            from = stoneId;
-        }
-
-        try (NativeImage image = mtm.getAssetAsTexture(String.format("minecraft:textures/block/%s.png", from));
+        try (NativeImage image = mtm.getAssetAsTexture(String.format("%s:textures/block/%s.png", from.getNamespace(), from.getPath()));
                 NativeImage top = mtm.getAssetAsTexture(template)) {
 
             TextureHelper.colorize(top, coloramp);
